[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "claude-session-vault"
dynamic = ["version"]
description = "Persist and search Claude Code sessions in SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Fatah Benguenna" }
]
keywords = ["claude", "claude-code", "session", "history", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tabulate>=0.9",
    "InquirerPy>=0.3.4",
    "textual>=0.50.0",
]

[project.scripts]
claude-vault = "claude_vault.cli:main"
claude-vault-hook = "claude_vault.hooks:main"
claude-vault-install = "claude_vault.installer:main"
claude-vault-mcp = "claude_vault.mcp_server:main"

[project.urls]
Homepage = "https://github.com/fatahbenguenna/claude-session-vault"
Repository = "https://github.com/fatahbenguenna/claude-session-vault"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_vault"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

# Version from git tags (hatch-vcs)
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/claude_vault/_version.py"

# Semantic Release Configuration
[tool.semantic_release]
version_toml = []  # We use hatch-vcs, not toml
version_variables = []
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install hatch && hatch build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
